--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,16 +12,15 @@ volumes:
 
 services:
   apache:
-    image: "httpd:2.4"
+    image: "litespeedtech/openlitespeed:latest"
     deploy:
       resources:
         limits:
           cpus: '0.3'
           memory: 100M
-      replicas: 2
+      replicas: 1
       placement:
         constraints:
-          #- node.labels.gluster == volume00
           - node.labels.static == production
           - node.role == worker
       labels:
@@ -37,7 +36,7 @@ services:
         - traefik.http.routers.${NAME}-static-https.tls.certresolver=le
         - traefik.http.services.${NAME}-static.loadbalancer.server.port=${WEB_SERVER_PORT-80}
     volumes:
-      - apache:/usr/local/apache2/htdocs/
+      - litespeed:/var/www/vhosts/localhost/html
     networks:
       - ingress
       
@@ -47,7 +46,6 @@ services:
       replicas: 1
       placement:
         constraints:
-          #- node.labels.gluster == volume00
           - node.labels.static == production
           - node.role == worker
       labels:
@@ -65,7 +63,7 @@ services:
     environment:
       FB_BASEURL: "/${NAME}/"
     volumes:
-      - apache:/data/
+      - litespeed:/data/
       - filebrowser_data:/config
     networks:
       - ingress   
